# zig_on_stm32

./: .gitattributes  .gitignore  CHANGELOG.md  ContainerFile  LICENSE  README.md  TODO.md  build.zig  projects_elf.tgz
Core/Src/: main.c  stm32l4xx_it.c
Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_dcmi.h  stm32l4xx_hal_hash.h  stm32l4xx_hal_irda.h  stm32l4xx_hal_usart.h
Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_sai_ex.c  stm32l4xx_hal_sram.c  stm32l4xx_ll_fmc.c
docs/: vscode.md  windows.md
nucleo64_native/: .clangd  .editorconfig  .mxproject  CMakeLists.txt  Makefile  STM32L476RGTx_FLASH.ld  nucleo64.ioc  zig.makefile
nucleo64_native/Core/Inc/: main.h
nucleo64_native/Core/Src/: main.c  usart.c
nucleo64_native/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_cryp_ex.h  stm32l4xx_hal_dma2d.h  stm32l4xx_hal_firewall.h  stm32l4xx_hal_hcd.h  stm32l4xx_hal_sai.h  stm32l4xx_hal_sai_ex.h  stm32l4xx_hal_smartcard.h  stm32l4xx_hal_smbus_ex.h
nucleo64_native/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_cryp.c  stm32l4xx_hal_hash.c  stm32l4xx_hal_nand.c  stm32l4xx_hal_ospi.c  stm32l4xx_hal_pka.c  stm32l4xx_hal_sai.c  stm32l4xx_hal_sd.c  stm32l4xx_ll_crc.c  stm32l4xx_ll_spi.c
nucleo64_native/cmake/: stm32l4.cmake
nucleo64_zig/: build.zig.zon  openocd.cfg
nucleo64_zig/.zig-cache/o/cbf5e75a998ac2c797cb0356efd99084/: dependencies.zig
nucleo64_zig/Core/Inc/: stm32l4xx_hal_conf.h
nucleo64_zig/Core/Src/: syscalls.c
nucleo64_zig/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32_assert_template.h
nucleo64_zig/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_lptim.c  stm32l4xx_hal_smbus.c  stm32l4xx_hal_wwdg.c  stm32l4xx_ll_comp.c  stm32l4xx_ll_tim.c
nucleo64_zig/src/: STM32L476RGTx_FLASH.ld
projects/stm32l476_nucleo/blinky/: -  .clang-format  .gdbinit  CMakeLists.txt  CMakePresets.json  README.md  build.zig
projects/stm32l476_nucleo/blinky/Core/Src/: main.c  sysmem.c
projects/stm32l476_nucleo/blinky/cmake/: gcc-arm-none-eabi.cmake  zig.cmake
projects/stm32l476_nucleo/blinky/src/: main.zig
projects/stm32l476_nucleo/blinky_freertos/: .gdbinit  README.md  blinky_freertos.ioc  build.zig  freertos-openocd.cfg  stm32l476rgtx_flash.ld
projects/stm32l476_nucleo/blinky_freertos/Core/Inc/: FreeRTOSConfig.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
projects/stm32l476_nucleo/blinky_freertos/Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
projects/stm32l476_nucleo/blinky_freertos/src/: main.zig
projects/stm32l476_nucleo/blinky_picolibc/: .clangd  .editorconfig  .gdbinit  .gitignore  ContainerFile  README.md  blinky.ioc  build.zig  stm32l476rgtx_flash.ld
projects/stm32l476_nucleo/blinky_picolibc/Core/Inc/: main.h  stm32l4xx_hal_conf.h
projects/stm32l476_nucleo/blinky_picolibc/libc/: cross-clang-thumbv7e+fp-custom.txt  cross-clang-thumbv7e+fp-none-eabi.txt
projects/stm32l476_nucleo/blinky_picolibc/src/: main.zig  vector_table.zig
projects/stm32l476_nucleo/blinky_picolibc/vector_table_examples/: vector_table.c  vector_table.s
projects/stm32l476_nucleo_blinky/: .clang-tidy  .mxproject  CMakeLists.txt  Makefile  STM32L476RGTx_FLASH.ld  blinky.ioc  build.zig  clang.makefile  startup_stm32l476xx.s  stm32l476rgtx_flash.ld  zig.mk
projects/stm32l476_nucleo_blinky/Core/Inc/: stm32l4xx_it.h
projects/stm32l476_nucleo_blinky/Core/Src/: main.c
projects/stm32l476_nucleo_blinky/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l432xx.h  stm32l443xx.h  stm32l462xx.h  stm32l4q5xx.h  stm32l4r9xx.h
projects/stm32l476_nucleo_blinky/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_conf_template.h  stm32l4xx_hal_dfsdm_ex.h  stm32l4xx_hal_dsi.h  stm32l4xx_hal_hash_ex.h  stm32l4xx_hal_mmc_ex.h  stm32l4xx_hal_nor.h  stm32l4xx_hal_ospi.h  stm32l4xx_hal_sd_ex.h  stm32l4xx_hal_usart_ex.h  stm32l4xx_ll_swpmi.h
projects/stm32l476_nucleo_blinky/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_dcmi.c  stm32l4xx_hal_dma2d.c  stm32l4xx_hal_smartcard.c  stm32l4xx_hal_smartcard_ex.c  stm32l4xx_hal_smbus_ex.c  stm32l4xx_hal_swpmi.c  stm32l4xx_ll_dac.c  stm32l4xx_ll_rtc.c
projects/stm32l476_nucleo_blinky_freertos/: CMakeLists.txt  CMakePresets.json  Makefile  README.md  STM32L476RGTx_FLASH.ld  blinky_freertos.ioc  build.zig  nucleo64.ioc  zig.mk
projects/stm32l476_nucleo_blinky_freertos/Core/Inc/: FreeRTOSConfig.h  stm32l4xx_it.h
projects/stm32l476_nucleo_blinky_freertos/Core/Src/: freertos.c  gpio.c  main.c  stm32l4xx_hal_msp.c  stm32l4xx_hal_timebase_tim.c  stm32l4xx_it.c
projects/stm32l476_nucleo_blinky_freertos/Drivers/CMSIS/Device/ST/STM32L4xx/Include/: stm32l4a6xx.h  stm32l4s9xx.h
projects/stm32l476_nucleo_blinky_freertos/Drivers/STM32L4xx_HAL_Driver/Inc/: stm32l4xx_hal_dfsdm.h  stm32l4xx_hal_irda_ex.h  stm32l4xx_hal_lcd.h  stm32l4xx_hal_ltdc.h  stm32l4xx_hal_pka.h  stm32l4xx_hal_sd.h  stm32l4xx_hal_tsc.h  stm32l4xx_hal_wwdg.h  stm32l4xx_ll_dma2d.h  stm32l4xx_ll_lptim.h
projects/stm32l476_nucleo_blinky_freertos/Drivers/STM32L4xx_HAL_Driver/Src/: stm32l4xx_hal_hcd.c  stm32l4xx_hal_ltdc.c  stm32l4xx_hal_mmc_ex.c  stm32l4xx_hal_msp_template.c  stm32l4xx_hal_qspi.c  stm32l4xx_hal_timebase_tim_template.c  stm32l4xx_hal_usart_ex.c  stm32l4xx_ll_rng.c  stm32l4xx_ll_sdmmc.c
projects/stm32l476_nucleo_blinky_freertos/cmake/: freertos.cmake  gcc-arm-none-eabi.cmake  library.cmake  stm32l4.cmake  utils.cmake
projects/stm32l476_nucleo_blinky_freertos_zig/: .gitignore  README.md  build.zig
projects/stm32l476_nucleo_blinky_freertos_zig/Core/Inc/: FreeRTOSConfig.h
projects/stm32l476_nucleo_blinky_freertos_zig/Core/Src/: freertos.c  main.c  stm32l4xx_hal_timebase_tim.c  sysmem.c
projects/stm32l476_nucleo_blinky_freertos_zig/src/: STM32L476RGTx_FLASH.ld  main.zig
projects/stm32l476_nucleo_blinky_zig/: README.md  build.zig
projects/stm32l476_nucleo_blinky_zig/Core/Inc/: stm32l4xx_hal_conf.h
projects/stm32l476_nucleo_blinky_zig/Core/Src/: main.c  stm32l4xx_hal_msp.c  syscalls.c
projects/stm32l476_nucleo_blinky_zig/src/: main.zig  stm32l476rgtx_flash.ld
src/: main.zig  startup_stm32l476xx.s
(+62 files in other folders)
